--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.16.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
